# gl-heap-fuckery

./: Cargo.toml  notes.md  target.rs
gl/: Cargo.toml  build.rs
resource/shaders/: blur_uv.cs.glsl  gen_args.cs.glsl  gen_color.cs.glsl  post_process.cs.glsl  rgb_to_yuv.cs.glsl  sprite.vert.glsl  test.frag.glsl  test.vert.glsl  test_indexed.vert.glsl  textured.frag.glsl  yuv_to_rgb.cs.glsl
src/: commands.rs  context.rs  main.rs  main_loop.rs  resource_manager.rs  upload_heap.rs
src/commands/: dispatch_cmd.rs  draw_cmd.rs  pass.rs
src/resource_manager/: fbo.rs  image.rs  pipeline.rs  sampler.rs  shader.rs
