[package]
name = "gl-fuckery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.22"
gl = "0.14"
winit = "0.27"
glutin = "0.30"
glutin-winit = "0.2"
raw-window-handle = "0.5.0"
anyhow = "1.0.71"
common = { git = "https://github.com/manpat/common-rs.git", version = "0.3" }
bumpalo = "3.12.1"
